--- a/exo1'-TP5/exo2TP5/exo2TP5.vcxproj
+++ b/exo1'-TP5/exo2TP5/exo2TP5.vcxproj
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\TP5\Exo2\tab2.h" />
+    <ClCompile Include="main2.c" />
+    <ClCompile Include="tab2.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\TP5\Exo2\main2.c" />
-    <ClCompile Include="..\..\..\TP5\Exo2\tab2.c" />
+    <ClInclude Include="tab2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
